SERVER-20260 New indexes should bump their Collection's minimum SnapshotName

This is a temporary solution to ensure that indexes created with w:majority
are guaranteed to be usable to a read using majority readConcern level. These
changes will be made undone once we complete the work of reunifying OpTime and
SnapshotName for SERVER-20439.